k8s/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chipy-web
  labels:
    app: chipy-web
    componant: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chipy-webserver
  template:
    metadata:
      labels:
        app: chipy-webserver
    spec:
      serviceAccountName: chipy
      containers:
      - name: web
        image: chipy:v1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: chipy-static
          mountPath: /site/proj/staticfiles
      volumes: 
      - name: chipy-static
        persistentVolumeClaim:
          claimName: chipy-web-static
