k8s/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chipy
spec:
  selector:
    app: chipy-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
